2004-05-13  Nathaniel Smith  <njs@codesourcery.com>

	* testsuite.at (test_hooks.lua): Add a 'test_attr' attribute
	hook.  Add tests t_attributes and t_single_char_filenames.
	* tests/t_attributes.at: New test.
	* tests/t_single_char_filenames.at: New test.
	* manifest.cc (read_manifest_map): Replace ".+" with ".*" to
	support single-character filenames.
	* work.cc (read_work_set): Likewise.
	(read_attr_map): Likewise.

2004-05-13  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (Hook Reference): Update documented default
	definitions of 'merge2' and 'merge3'.

2004-05-12  Nathaniel Smith  <njs@pobox.com>

	* AUTHORS: Remove discussion of adns, since we no longer
	distribute it.  Fix capitalization of "Netxx".

2004-05-12  Nathaniel Smith  <njs@pobox.com>

	* std_hooks.lua (merge2): Support xemacs.  Add error message
	if no merge tool is found.
	(merge3): Likewise.  Also add (disabled) hook to use CVS
	'merge' command, as a demonstration of how to.

2004-05-12  graydon hoare  <graydon@pobox.com>

	* std_hooks.lua (get_author): Remove standard definition.
	* monotone.texi: Document change.

2004-05-12  graydon hoare  <graydon@pobox.com>

	* cert.cc (cert_manifest_author_default): Use default signing key
	name for default author, if lua hook fails.

2004-05-12  Joel Rosdahl  <joel@rosdahl.net>

	* file_io.cc (walk_tree): Removed extraneous newline in error
	message.

	* std_hooks.lua (edit_comment): Added missing newline in log
	message template.

	* tests/t_ls_missing.at: New test case.
	* testsuite.at: Added t_ls_missing.at.

2004-05-10  graydon hoare  <graydon@pobox.com>

	* nonce.cc, nonce.hh: New files.
	* Makefile.am: Note new files.
	* lua.cc, lua.hh (hook_get_nonce): New hook.
	* commands.cc (bump): New command.
	* commands.cc: Remove "(file|manifest)" args most places.
	* tests/t_disapprove.at
	* tests/t_genkey.at
	* tests/t_singlenetsync.at
	* tests/t_netsync.at
	* tests/t_persist_phrase.at: Adjust to compensate.